--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects Company</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Calligraffitti&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+</style>
 </head>
-<body>
+<body class="work-sans-font">
+    <header>
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
