--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
 </style>
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navbar">
-            <h3 class="brand">G3 Architects</h3>
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand"><a href="">G3 Architects</a></h3>
+            <ul class="nav-links display-flex">
+    
+                <li class="nav-item"><a href="" class="nav-link" text-gray></a>Home</li>
+                <li class="nav-item"><a href="" class="nav-link" text-gray></a>About</li>
+                <li class="nav-item"><a href="" class="nav-link" text-gray></a>Contact US</li>
+                <li class="nav-item"><a href="" class="nav-link" text-gray></a>Login</li>
+
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+
+                <button class="btn-p">Explore More</button>
+            </div>
+            <img class="bnr-img" src="images/banner.png" alt="">
+        </div>
     </header>
 
     <main>
