--- a/index.html
+++ b/index.html
@@ -34,7 +34,22 @@
     </header>
 
     <main>
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="Two architects discussing">
+                <img src="images/team2.png" alt="Three Professional Architects">
+                <img src="images/team3.png" alt="Work-time">
+                <img src="images/team4.png" alt=" Communication">
+            </div>
 
+            <div class="our-features">
+                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span class="text-light-gray">of Our</span> <span class="text-primary">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                <button class="btn-p">Explore More</button>
+            </div>
+
+
+        </section>
     </main>
 
 
