--- a/index.html
+++ b/index.html
@@ -43,19 +43,132 @@
             </div>
 
             <div class="our-features">
-                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span class="text-light-gray">of Our</span> <span class="text-primary">Features</span></h3>
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span class="text-light-gray">of Our</span> <span class="text-primary">Features</span></h3>
                 <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
                 <button class="btn-p">Explore More</button>
             </div>
 
 
         </section>
+
+
+        <!-- Something -->
+
+
+
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-gray hui">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+
+
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-grey">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-grey">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-grey">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-grey">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="featured-architect">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-p">
+                    <span id="year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
+
+
+
+
+
+        <!-- Facts -->
+
+
+        <section id="fact">
+            <div class="facts-title">
+                <h3 class="section-title">Some Facts</h3>
+                <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winning</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Projects Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Emails Sent</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sponsors -->
+
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
     </main>
 
 
 
-    <footer>
-
+    <footer class="footer">
+        <div class="fot-text">
+            <h5>All rights reserved &copy; Copyright 2026 Startup Landing Page Design</h5>
+        </div>
     </footer>
 </body>
 </html>
